horizon (2012.1~e4~20120210.1331-0ubuntu2) UNRELEASED; urgency=low

  * debian/patches/openstack-config-settings.patch: Refreshed.
  * debian/copyright: Updated copyright.

 -- Chuck Short <zulcss@ubuntu.com>  Mon, 13 Feb 2012 08:51:08 -0500

horizon (2012.1~e4~20120210.1331-0ubuntu1) precise; urgency=low

  * New Upstream version
  * debian/control: 
   - Add python-coverage as a build dependency. 
   - Add python-novaclient as a build dependency.

 -- Chuck Short <zulcss@ubuntu.com>  Fri, 10 Feb 2012 11:09:58 -0500

horizon (2012.1~e4~20120202.1300-0ubuntu2) precise; urgency=low

  * debian/control: Add python-keystoneclient as a build 
    dependency. 

 -- Chuck Short <zulcss@ubuntu.com>  Fri, 03 Feb 2012 13:29:27 -0500

horizon (2012.1~e4~20120202.1300-0ubuntu1) precise; urgency=low

  * New upstream version.
  * debian/control: Drop dependencies we dont need. 

 -- Chuck Short <zulcss@ubuntu.com>  Fri, 03 Feb 2012 09:55:54 -0500

horizon (2012.1~e3-0ubuntu1) precise; urgency=low

  * New upstream version.
  * debian/conffiles: Don't wipe out local_settings.py on upgrade.
    (LP: #914257) 

 -- Chuck Short <zulcss@ubuntu.com>  Thu, 26 Jan 2012 09:52:53 -0500

horizon (2012.1~e3~20120120.1235-0ubuntu1) precise; urgency=low

  * New upstream release. 

 -- Chuck Short <zulcss@ubuntu.com>  Fri, 20 Jan 2012 14:51:21 -0500

horizon (2012.1~e3~20120113.1213-0ubuntu1) precise; urgency=low

  [Chuck Short]
  * Removed python-django-horizon.postinst, let dh_python2 generate instead
    since python-support is not a dependency. 
  * Dropped python-openstack-compute from debian/control.
  * Clean up debian/control.
  * Restart apache when installing the openstack dashboard.
    (LP: #905527)
  * Dropped python-coverage not needed.
  * Added transitional package for people updating from oneiric.
  * Rediffed patches.
  * More linitian fixes.

  [Robie Basak]
  * debian/control: put python-django-horizon in Python section.
  * debian/control: lintian fixes (LP: #899427):