@@ -25,10 +25,10 @@ override_dh_auto_install:
 	cp $(CURDIR)/openstack-dashboard/local/local_settings.py.example \
 		$(CURDIR)/debian/openstack-dashboard/etc/openstack-dashboard/local_settings.py
 
-ifeq (,$(findstring nocheck, $(DEB_BUILD_OPTIONS)))
-override_dh_auto_test:
-	bash run_tests.sh -N || true
-endif
+#ifeq (,$(findstring nocheck, $(DEB_BUILD_OPTIONS)))
+#override_dh_auto_test:
+#	bash run_tests.sh -N || true
+#endif
 
 override_dh_auto-clean:
 	dh_clean
