@@ -2,8 +2,10 @@ horizon (2012.1~e4~20120210.1331-0ubuntu2) UNRELEASED; urgency=low
 
   * debian/patches/openstack-config-settings.patch: Refreshed.
   * debian/copyright: Updated copyright.
+  * debian/rules: Diable tests since it doesnt work without a
+    virtualenv.
 
- -- Chuck Short <zulcss@ubuntu.com>  Mon, 13 Feb 2012 08:51:08 -0500
+ -- Chuck Short <zulcss@ubuntu.com>  Mon, 13 Feb 2012 11:26:01 -0500
 
 horizon (2012.1~e4~20120210.1331-0ubuntu1) precise; urgency=low
 
